# FireControlBot

./: .env.example  .gitignore  README.md  bot.db  prestart.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3b017149e2cf_initial.py
bot/: config.py  main.py  parse_data.py  utils.py
bot/core/: config.py  logger.py
bot/crud/: base.py  crud_fire.py  crud_user.py
bot/db/: base.py  base_class.py  session.py
bot/extra_data/: yasen_06_2022_getDynamicsResponse.json  yasen_06_2022_getFireInformationResponse.json  yasen_07_2022_getDynamicsResponse.json  yasen_07_2022_getFireInformationResponse.json
bot/functions/: help.py
bot/handlers/: bot_functions.py  core.py  help.py  inline.py  message.py  start.py
bot/heatmap/: heatmap_generator.py
bot/interfaces/menues/: charts.py  fire_dates.py  main.py
bot/models/: user.py
bot/notifications/: day.py  main.py  month.py  season.py  texts.py  year.py
bot/plot_preparing/: prepare_plots.py
bot/schemas/: fire.py  user.py
bot/services/: basic.py  help.py
