[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Fizic <kirya.firsov.04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.8.0"
sqlalchemy = "^1.4.44"
python-dotenv = "^0.21.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
alembic = "^1.8.1"
schedule = "^1.1.0"
pyttsx3 = "^2.90"
plotly = "^5.11.0"
pandas = "^1.5.2"
kaleido = "0.2.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
